feature: make web application from app

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       - LOG_LEVEL=${LOG_LEVEL}
     ports:
       - "8000:8000"
+    network_mode: "host"
     command: >
       python app.py
       --url ${URL}
