feature: add port to config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - EXPECTED_NUM=${EXPECTED_NUM}
       - FTP_HOST=${FTP_HOST}
       - LOG_LEVEL=${LOG_LEVEL}
+      - HTTP_PORT=${HTTP_PORT}
     ports:
       - "8000:8000"
     network_mode: "host"
@@ -22,3 +23,4 @@ services:
       --expected_num ${EXPECTED_NUM}
       --ftp_host ${FTP_HOST}
       --log_level ${LOG_LEVEL}
+      --http_port ${HTTP_PORT}
