--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
+httpx==0.27.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
@@ -11,6 +12,5 @@ MarkupSafe==3.0.2
 numpy==2.2.2
 opencv-python==4.11.0.86
 pylibdmtx==0.1.10
-requests==2.32.3
 urllib3==2.3.0
 Werkzeug
