--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,3 +23,4 @@ services:
       --expected_num ${EXPECTED_NUM}
       --log_level ${LOG_LEVEL}
       --http_port ${HTTP_PORT}
+    # --test  # Uncomment this line to run the tests with mock data
