feature: capture frames from RTSP

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-URL=http://192.168.1.115/cgi-bin/snapshot.cgi
+URL=rtsp://admin:salek2025@192.168.109.64:554/live
 TIMEOUT=1
 EXPECTED_NUM=12
 LOG_LEVEL=INFO
