feature: label printing

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ LOG_LEVEL=INFO
 HTTP_PORT=8081
 RESULTS_DIR=./results
 MAX_FAILED_ATTEMPTS=2
+LABEL_TITLE="Салек АПА 0,45л"
+LABEL_TEXT="пиво светлое, непастеризованное, неосветлённое, нефильтрованное"
