--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: datamatrix_decoder_app
     volumes:
       - ${RESULTS_DIR}:/app/results
-      - /var/run/cups/cups.sock:/var/run/cups/cups.sock
+#      - /var/run/cups/cups.sock:/var/run/cups/cups.sock
     environment:
       - URL=${URL}
       - TIMEOUT=${TIMEOUT}
